# axebot

./: .gitignore  README.md  axebot.foxy.repos  axebot.humble.repos
.github/workflows/: humble-source-build.yaml
axebot_control/: CMakeLists.txt  package.xml
axebot_control/config/: omnidirectional_controller.yaml
axebot_control/include/axebot_control/: go_to_goal.hpp
axebot_control/launch/: move_axebot_to_point.launch.py
axebot_control/src/: go_to_goal.cpp  go_to_goal_node.cpp
axebot_description/: CMakeLists.txt  package.xml
axebot_description/config/: config.rviz  ros2_controllers.yaml  wheel_only.rviz
axebot_description/launch/: axebot_on_gazebo.launch.py  view_robot.launch.py
axebot_description/meshes/: rim.stl  roller.stl  wheel-collision.dae
axebot_description/urdf/: axebot.urdf.xacro  axebot_description.urdf.xacro  axebot_materials.xacro  axebot_wheels.urdf.xacro  gazebo.urdf.xacro  materials.urdf.xacro  ros2_control.urdf.xacro  wheel.urdf.xacro
axebot_gazebo/: CMakeLists.txt  package.xml
axebot_gazebo/launch/: axebot.launch.py
